Correctly align footer elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,8 +133,12 @@ nav li:hover {
 
 #footer-box {
     width: 100%;
-    height: 200px;
+    height: 100px;
     background-color: #fafafa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    word-spacing: 50px;
 }
 
 .socials {
